fix: dark mode background

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
+  background-color: rgb(var(--background-rgb))
 }
 
 a {
